force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__AutogeneratedVoucherCodeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__AutogeneratedVoucherCodeText__c</fullName>
    <label>Autogenerated Voucher Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AutogeneratedVoucherCodeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>