force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__rel_1729831516494_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729831516494_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher_AccountContactId_map_Account_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>Voucher_AccountContactId_map_Account_rel</relationshipLabel>
    <relationshipName>rel_1729831516494_end</relationshipName>
    <type>Lookup</type>
</CustomField>