force-app/main/default/objects/ssot__Voucher__dlm/fields/ssot__RemainingValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__RemainingValueAmount__c</fullName>
    <label>Remaining Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RemainingValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>